# amazon_web_scraper

./: amazon_products.csv  pyproject.toml
src/selenium/: __init__.py  main.py  py.py
