[project]
name = "selenium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sadiqali12", email = "sadiqalinizamani32@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
selenium = "selenium:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
